fix login form wrapping
merges fd093a61c460aaa1665d51370a7c3049a2fcccb0

--- a/www/less/components/forms.less
+++ b/www/less/components/forms.less
@@ -15,6 +15,7 @@
 	&.input-password {
 		background: url(../img/inputs/input-lock-normal.svg) no-repeat;
 		background-position: 99.5% center;
+	  	padding-right: 26px;
 		&:focus {
 			background-image: url(../img/inputs/input-lock-focus.svg);
 		}
@@ -39,6 +40,9 @@
 
 .has-addend {
   position: relative;
+  .form-control {
+	padding-right: 26px;
+  }
 }
 .addend-icon {
   position: absolute;
